--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+    <h1>Get in touch</h1>
     <div class="well">
       <%= form_for(@contact, html: {class: "form-horizontal"})  do |f|%>
         <div class="form-group">
